@@ -1735,7 +1735,15 @@ function wp_new_user_notification( $user_id, $deprecated = null, $notify = '' ) 
 
 	$message = sprintf(__('Username: %s'), $user->user_login) . "\r\n\r\n";
 	$message .= __('To set your password, visit the following address:') . "\r\n\r\n";
+
+// XTEC ************ MODIFICAT - Fixed URL to change password not showing in email sent to new users
+// 2016.09.09 @aginard
+	$message .= network_site_url("wp-login.php?action=rp&key=$key&login=" . rawurlencode($user->user_login), 'login') . "\r\n\r\n";
+//************ ORIGINAL
+/*
 	$message .= '<' . network_site_url("wp-login.php?action=rp&key=$key&login=" . rawurlencode($user->user_login), 'login') . ">\r\n\r\n";
+*/
+//************ FI
 
 	$message .= wp_login_url() . "\r\n";
 
